--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,111 @@
 body {
-  color: blueviolet;
+  background-color: hsl(260, 7%, 9%);
+}
+
+h1,
+h2,
+h3 {
+  color: hsl(271, 76%, 53%);
+}
+
+header {
+  background-color: hsl(216, 8%, 13%);
+}
+
+.check_svg {
+  border: none;
+  background-color: hsl(120deg 82% 38%);
+  border-radius: 20%;
+}
+
+.check_svg:hover {
+  background-color: hsl(120, 29%, 62%);
+}
+
+.change_svg {
+  border: none;
+  border-radius: 20%;
+}
+
+.change_svg:hover,
+.change_svg svg :hover {
+  background-color: rgb(90, 89, 89);
+  fill: aliceblue;
+}
+
+.delete_svg {
+  border-radius: 20%;
+  border: none;
+  background-color: hsl(0, 55%, 48%);
+}
+
+.delete_svg:hover {
+  background-color: hsl(0, 43%, 56%);
+}
+
+.left-box {
+  display: flex;
+  padding: 1rem;
+  justify-content: space-between;
+}
+
+.left-box,
+.space_add,
+.space_done,
+.space_header {
+  max-width: 90rem;
+  margin: 0 auto;
+}
+
+.tittle_button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.side {
+  display: flex;
+  flex-direction: column;
+  max-width: max-content;
+  gap: 1rem;
+}
+
+.output {
+  gap: 0.4375rem;
+  display: flex;
+}
+
+.output button svg {
+  width: 1rem;
+}
+
+.result {
+  background-color: hsl(0, 0%, 100%);
+  padding: 0.1875rem;
+  width: 100%;
+}
+
+.add {
+  display: flex;
+}
+
+.add button svg {
+  width: 1rem;
+}
+
+.space_add {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.logo_title {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.logo_title img {
+  width: 2rem;
+  height: 2rem;
 }
