--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
+    {{{body}}}
     <header>
       <div class="space_header">
         <div class="tittle_button">
