--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,4 +1,4 @@
-{{#each add}}
+{{#with add}}
   <h2>{{title}}</h2>
   <div class="add">
     <form>
@@ -8,4 +8,4 @@
       <img src="{{svg}}" alt="{{svgName}}" />
     </button>
   </div>
-{{/each}}
+{{/with}}
