--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,11 +1,11 @@
 <div class="space_header">
   <div class="tittle_button">
-    {{#each header}}
+    {{#with header}}
       <div class="logo_title">
         <img src="{{image}}" alt="{{name}}" />
         <h1>{{title}}</h1>
       </div>
       <button class="logout">{{button}}</button>
-    {{/each}}
+    {{/with}}
   </div>
 </div>
