--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -1,8 +1,8 @@
 <div class="space_side">
   <div class="side">
     <h3>Categories</h3>
-    {{#each nav_item}}
-      <button class="categories"> {{name}} </button>
+    {{#each nav_items}}
+      <a href="/category/{{id}}" class="categories"> {{name}} </a>
     {{/each}}
   </div>
 </div>
