--- a/src/views/partials/output_add.hbs
+++ b/src/views/partials/output_add.hbs
@@ -1,17 +1,27 @@
 <ul class="output_add">
-  {{#each output_add}}
+  {{#each allTodosFromCategory}}
     <li>
       <button class="check_svg">
-        <img src="{{check_btn}}" alt="{{name1}}" />
+        <?xml version="1.0" encoding="iso-8859-1"?>
+<!-- Generator: Adobe Illustrator 21.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 80.588 61.158" style="enable-background:new 0 0 80.588 61.158;" xml:space="preserve">
+<path style="fill:#231F20;" d="M29.658,61.157c-1.238,0-2.427-0.491-3.305-1.369L1.37,34.808c-1.826-1.825-1.826-4.785,0-6.611
+	c1.825-1.826,4.786-1.827,6.611,0l21.485,21.481L72.426,1.561c1.719-1.924,4.674-2.094,6.601-0.374
+	c1.926,1.72,2.094,4.675,0.374,6.601L33.145,59.595c-0.856,0.959-2.07,1.523-3.355,1.56C29.746,61.156,29.702,61.157,29.658,61.157z
+	"/>
+</svg>
+       
       </button>
       <div class="result">
-        {{text}}
+        {{name}}
       </div>
       <button class="delete_svg">
-        <img src="{{delete_btn}}" alt="{{name3}}" />
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 58.67"><defs><style>.cls-1{fill:#35353d;}</style></defs><title>Asset 25</title><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><path class="cls-1" d="M61.33,5.33H48V2.67A2.66,2.66,0,0,0,45.33,0H18.67A2.66,2.66,0,0,0,16,2.67V5.33H2.67a2.67,2.67,0,0,0,0,5.34H8v40a8,8,0,0,0,8,8H48a8,8,0,0,0,8-8v-40h5.33a2.67,2.67,0,1,0,0-5.34ZM50.67,50.67A2.67,2.67,0,0,1,48,53.33H16a2.67,2.67,0,0,1-2.67-2.66v-40H50.67Z"/><path class="cls-1" d="M24,45.33a2.67,2.67,0,0,0,2.67-2.66V21.33a2.67,2.67,0,0,0-5.34,0V42.67A2.67,2.67,0,0,0,24,45.33Z"/><path class="cls-1" d="M40,45.33a2.67,2.67,0,0,0,2.67-2.66V21.33a2.67,2.67,0,0,0-5.34,0V42.67A2.67,2.67,0,0,0,40,45.33Z"/></g></g></svg>
       </button>
       <button class="change_svg">
-        <img src="{{change_btn}}" alt="{{name2}}" />
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 64"><g id="Layer_93" data-name="Layer 93"><path d="M12.55,39.49,9.69,51.91a2,2,0,0,0,2.4,2.4l12.42-2.86a2,2,0,0,0,1-.54c7.16-7.15,28.32-28.31,35.14-35.14a2,2,0,0,0,0-2.83L51.06,3.39a2,2,0,0,0-2.83,0L37.93,13.68,13.09,38.53A2,2,0,0,0,12.55,39.49ZM49.65,7.63l6.72,6.73L48.9,21.82,42.18,15.1ZM16.32,41l23-23,6.72,6.72-23,23-8.74,2Z"/><path d="M60,30a2,2,0,0,0-2,2V58H6V6H32a2,2,0,0,0,0-4H4A2,2,0,0,0,2,4V60a2,2,0,0,0,2,2H60a2,2,0,0,0,2-2V32A2,2,0,0,0,60,30Z"/></g>
+      </svg>
       </button>
     </li>
   {{/each}}
