--- a/public/css/main.css
+++ b/public/css/main.css
@@ -71,6 +71,11 @@ header {
   gap: 1rem;
 }
 
+.side a {
+  text-decoration: none;
+  text-align: center;
+}
+
 .output,
 .output_add {
   padding: 0;
@@ -82,8 +87,8 @@ header {
   padding: 0.375rem;
 }
 
-.output button img,
-.output_add button img {
+.output button svg,
+.output_add button svg {
   width: 1rem;
 }
 
@@ -98,7 +103,7 @@ header {
   display: flex;
 }
 
-.add button img {
+.add button svg {
   width: 1rem;
 }
 
