--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,11 +1,9 @@
 <div class="space_header">
   <div class="tittle_button">
-    {{#with header}}
-      <div class="logo_title">
-        <img src="{{image}}" alt="{{name}}" />
-        <h1>{{title}}</h1>
-      </div>
-      <button class="logout">{{button}}</button>
-    {{/with}}
+    <div class="logo_title">
+      <img src="../img/logo.png" alt="logo" />
+      <h1>Just do it!</h1>
+    </div>
+    <button class="logout">Logout</button>
   </div>
 </div>
