--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,11 +1,23 @@
-{{#with add}}
-  <h2>{{title}}</h2>
-  <div class="add">
-    <form>
-      <input type="search" placeholder="{{placeholder}}" />
-    </form>
-    <button class="plus_svg">
-      <img src="{{svg}}" alt="{{svgName}}" />
-    </button>
-  </div>
-{{/with}}
+<h2>We've got things to do!</h2>
+<div class="add">
+  <form>
+    <input type="search" placeholder="what us your task?" />
+  </form>
+  <button class="plus_svg">
+    <svg
+      xmlns="http://www.w3.org/2000/svg"
+      viewBox="0 0 24 24"
+      fill="none"
+      stroke="currentColor"
+      stroke-width="2"
+      stroke-linecap="round"
+      stroke-linejoin="round"
+      class="feather feather-plus"
+    ><line x1="12" y1="5" x2="12" y2="19"></line><line
+        x1="5"
+        y1="12"
+        x2="19"
+        y2="12"
+      ></line></svg>
+  </button>
+</div>
