--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,9 +1,9 @@
-<div class="space_header">
-  <div class="tittle_button">
-    <div class="logo_title">
-      <img src="../img/logo.png" alt="logo" />
-      <h1>Just do it!</h1>
-    </div>
-    <button class="logout">Logout</button>
+<div class="tittle_button">
+  <div class="logo_title">
+    <img src="../img/logo.png" alt="logo" />
+    <h1>Just do it!</h1>
   </div>
+  <form action="/logout" method="post">
+    <button type="submit" class="logout">Logout</button>
+  </form>
 </div>
