--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,7 +1,7 @@
 <h2>We've got things to do!</h2>
 <div class="add">
-  <form>
-    <input type="search" placeholder="what us your task?" />
+  <form method="post" action="input">
+    <input type="search" placeholder="what is your task?" />
   </form>
   <button class="plus_svg">
     <svg
