--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,5 +1,6 @@
 <h2>We've got things to do!</h2>
 <div class="add">
+  {{#each }}
   <form method="post" action="input">
     <input type="search" placeholder="what is your task?" />
   </form>
