--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,24 +1,26 @@
 <h2>We've got things to do!</h2>
 <div class="add">
-  {{#each }}
-  <form method="post" action="input">
-    <input type="search" placeholder="what is your task?" />
+  <form method="post" action="">
+    <input type="text" placeholder="what is your task?" />
+    <button class="plus_svg">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 24 24"
+        fill="none"
+        stroke="currentColor"
+        stroke-width="2"
+        stroke-linecap="round"
+        stroke-linejoin="round"
+        class="feather feather-plus"
+      ><line x1="12" y1="5" x2="12" y2="19"></line><line
+          x1="5"
+          y1="12"
+          x2="19"
+          y2="12"
+        ></line>
+      </svg>
+    </button>
+
   </form>
-  <button class="plus_svg">
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      viewBox="0 0 24 24"
-      fill="none"
-      stroke="currentColor"
-      stroke-width="2"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      class="feather feather-plus"
-    ><line x1="12" y1="5" x2="12" y2="19"></line><line
-        x1="5"
-        y1="12"
-        x2="19"
-        y2="12"
-      ></line></svg>
-  </button>
+
 </div>
