--- a/src/views/home.hbs
+++ b/src/views/home.hbs
@@ -1,6 +1,9 @@
 <header>
     {{> header}}
 </header>
+  <div class="email">
+   <p>welkom {{user.email}}</p> 
+  </div>
 <div class="left-box">
     {{> nav}}
   <div class="todo_add_dones">
@@ -17,3 +20,4 @@
     </div>
   </div>
 </div>
+
