--- a/src/views/partials/output.hbs
+++ b/src/views/partials/output.hbs
@@ -3,7 +3,7 @@
   {{#each output}}
     <li>
       <div class="result">
-        {{text}}
+        {{name}}
       </div>
       <button class="delete_svg">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 64 58.67"><defs
