--- a/src/views/partials/header.hbs
+++ b/src/views/partials/header.hbs
@@ -1,7 +1,9 @@
 <div class="tittle_button">
   <div class="logo_title">
-    <img src="../img/logo.png" alt="logo" />
-    <h1>Just do it!</h1>
+    <a href="/">
+      <img src="../img/logo.png" alt="logo" />
+      <h1>Just do it!</h1>
+    </a>
   </div>
   <form action="/logout" method="post">
     <button type="submit" class="logout">Logout</button>
