--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,8 +1,9 @@
 <h2>We've got things to do!</h2>
 <div class="add">
-  <form method="post" action="">
-    <input type="text" placeholder="what is your task?" />
-    <button class="plus_svg">
+  <form method="post" action="/todo">
+    <input type="number" name="category" placeholder="1">
+    <input type="text" placeholder="what is your task?" name="name" />
+    <button type="submit" class="plus_svg">
       <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 24 24"
