--- a/public/css/main.css
+++ b/public/css/main.css
@@ -117,6 +117,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  text-decoration: none;
 }
 
 .logo_title img {
