--- a/src/views/partials/writeHere.hbs
+++ b/src/views/partials/writeHere.hbs
@@ -1,7 +1,12 @@
 <h2>We've got things to do!</h2>
 <div class="add">
   <form method="post" action="/todo">
-    <input type="number" name="category" placeholder="1">
+    {{!-- <input type="text" name="category" placeholder="1"> --}}
+      <select name="category">
+      {{#each nav_items}}
+      <option value="{{id}}">{{name}}</option>
+      {{/each}}
+    </select>
     <input type="text" placeholder="what is your task?" name="name" />
     <button type="submit" class="plus_svg">
       <svg
