--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -7,8 +7,10 @@
       {{>form-input this}}
     {{/each}}
     <div class="footer-container">
+      <form action="">
       <input type="reset" class="btn btn-tertiary" value="Clear">
       <input type="submit" class="btn btn-primary" value="Login">
+      </form>
     </div>
   </form>
 </section>
