--- a/src/views/partials/nav.hbs
+++ b/src/views/partials/nav.hbs
@@ -1,8 +1,12 @@
 <div class="space_side">
   <div class="side">
     <h3>Categories</h3>
+     <form method="post" action="/category">
+    <input type="text" placeholder="categorie toevoegen" name="name" />
+  </form>
     {{#each nav_items}}
       <a href="/category/{{id}}" class="categories"> {{name}} </a>
     {{/each}}
+   
   </div>
 </div>
